[options]
install_requires= 
    mistletoe>=0.7.2
    requests>=2.22.0
    # https://github.com/jamalex/notion-py/issues/305
    notion @ git+https://github.com/jamalex/notion-py.git@refs/pull/294/merge#egg=notion-0.0.28

dependency_links=
    git+https://github.com/jamalex/notion-py.git@refs/pull/294/merge#egg=notion-0.0.28


